Fix spacing errors and add

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
   font-family: "Fredoka One", sans-serif;
-  background: repeating-linear-gradient(
+  background:
+  repeating-linear-gradient(
     -45deg,
     #c9fcff,
     #c9fcff 10px,
@@ -9,10 +10,10 @@ html {
     );
   }
 
-header {
-  border-top: solid 8px #b3fbff;
-  border-bottom: solid 8px #b3fbff;
-}
+  header {
+    border-top: solid 8px #b3fbff;
+    border-bottom: solid 8px #b3fbff;
+  }
 
   h1 {
     color: #990073;
@@ -58,7 +59,7 @@ header {
     top: 80px;
   }
 
-  .btn{
+  .btn {
     border-color: #c09;
     position: absolute;
   }
